# Agent-Smart-Home-System

./: .gitignore  .gitmodules  AGENTS.md  README.md  TEST_CASES.md
.agents/: README.md
.github/workflows/: notify-webhook.yml  opencode.yml  publish-llm-json-parse.yml  publish-python-packages.yml
config/: communication.yaml
docs/: Architect.md  Glossary.md  HomeSystemAgent.md  README.md  STAGE_1_5_COMPLETED.md  TEST_CASES.md  Transport.md  Usage.md  communication.md  github-webhook-alternative.md  system-overview.md  编码智能体提示词.md
docs/agents/: central-agent.md  personal-agent.md  room-agent.md
esp32-ble-beacon/: .gitignore  README.md
home-agent/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
home-agent/config/: default_config.yaml  home-assistant.example.yaml  policies.yaml
home-agent/core/: __init__.py  observability.py
home-agent/core/central_agent/: __init__.py  central_agent.py
home-agent/core/central_agent/arbitrator/: __init__.py  arbitrator.py
home-agent/core/central_agent/policy_engine/: __init__.py  policy_engine.py
home-agent/core/central_agent/state_manager/: __init__.py  state_manager.py
home-agent/core/home_assistant_mcp/: __init__.py  home_assistant_client.py
home-agent/core/intelligent-qa-system/: mcp_config.yaml  mcp_server.py
home-agent/core/intelligent-qa-system/mcp_tools/: __init__.py  rag_search.py
home-agent/docs/: HomeSystemAgent.md  README.md  TEST_CASES.md  communication.md  system-overview.md
home-agent/docs/agents/: central-agent.md  personal-agent.md  room-agent.md
home-agent/shared/models/: mqtt_messages.py
home-agent/shared/mqtt/: __init__.py  client_manager.py
home-agent/tests/: test_central_agent.py  test_home_assistant_mcp.py
issue/: 001-mqtt-client-manager.md  002-message-format-standardization.md  003-topic-namespace-design.md  004-personal-room-agent-communication.md  005-room-agent-state-management.md  006-central-agent-communication.md  007-global-state-management.md  008-arbitration-mechanism.md  009-policy-engine.md  010-security-authentication.md  011-error-handling-fallback.md  012-performance-monitoring.md
mqtt-broker/: mosquitto-docker-compose.yml
personal-agent/: .gitignore  README.md  package-lock.json  package.json
qwen-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  package-lock.json  package.json  update-image.sh
react-native-personal-agent/: .env.example  AGENTS.md  README.md  app.config.ts  app.json  jest.config.js  jest.setup.js  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
report/: 2026-03-18-personal-agent-review-and-plan.md
room-agent/: .env.example  .gitignore  README.md  config.py  pyproject.toml  run_room_agent.py
room-agent/app/: __init__.py  a2a_server.py  gateway_client.py  main.py  public_url.py  server.py  test_cli.py
room-agent/config/: README.md  __init__.py  room_agent.yaml  room_agent_livingroom.yaml  settings.py
room-agent/config/examples/: llm.example.yaml  room_agent.example.yaml  room_agent_bedroom.example.yaml  room_agent_livingroom.example.yaml
room-agent/core/room_agent/: __init__.py  room_agent.py
room-agent/core/room_agent/beacon/: beacon_config.py
room-agent/core/room_agent/devices/: __init__.py  device_controller.py
room-agent/core/room_agent/models/: __init__.py
room-agent/core/room_agent/mqtt/: client_manager.py
room-agent/docs/: ARCHITECTURE.md  ENVIRONMENT.md  ESP32_BEACON_BINDING.md  INTENT_ROUTING_ARCHITECTURE.md  LANGGRAPH_GRAPH_PLAN.md  LANGGRAPH_REBUILD_MIGRATION_PLAN.md  WORKER3_TEST_EVIDENCE_REPORT.md
room-agent/esp32_beacon_config/: README.md  esp32_beacon_config.h  sdkconfig.defaults
room-agent/graph/: AGENT.md  AGENTS.md  __init__.py  builder.py  entry.py  mcp_prompt_context.py  state.py
room-agent/graph/nodes/: __init__.py  classify_intent.py  direct_response.py  finalize.py  intent_recognition.py  simple_chat.py  task_router.py  tool_selection.py
room-agent/graph/nodes/tool_selection/: __init__.py  node.py  token_estimator.py  utils.py
room-agent/graph/nodes/utils/: heuristic_classify.py  structured_output.py
room-agent/graph/subgraphs/: __init__.py  mcp_workflow.py
room-agent/graph/subgraphs/agent_execution/: __init__.py  entry.py  state.py
room-agent/graph/subgraphs/sasha_verification/: __init__.py  entry.py  state.py
room-agent/graph/utils/: prompt_patch.py
room-agent/integrations/: __init__.py  llm_provider.py  mcp_client.py
room-agent/scripts/: a2a_debug_client.py  generate_esp32_beacon.py  test_heartbeat.py  validate_beacon_binding.py
room-agent/test/: conftest.py
room-agent/test/room_agent/: README.md  test_room_agent_beacon_integration.py  test_room_agent_integration.py
room-agent/tests/: README.md  conftest.py  test_a2a_server.py  test_config_settings.py  test_fixture_sanitization.py  test_gateway_client.py  test_graph_context.py  test_graph_smoke.py  test_llm_provider.py  test_mcp_client_config.py  test_prompt_patch.py  test_public_url.py  test_sasha_verification.py  test_server_cli_args.py  test_server_entrypoint.py  test_server_gateway_runtime.py  test_server_mcp_runtime.py
room-agent/tests/fixtures/: llm.yaml
room-agent/tests/graph/: test_builder.py  test_classify_intent.py  test_llm_registry.py
room-agent/tests/tools/: test_mcp_tools.py
room-agent/tools/: __init__.py  mcp_tools.py
scripts/: a2a_debug_client.py  publish_python_package.py  python-publish.json
shared/: __init__.py  utils.py
shared/a2a/: README.md  (+5 more)
shared/llm-json-parse/: README.md  pyproject.toml
shared/llm-json-parse/llm_json_parse/: __init__.py  json_parser.py  openai_provider.py  protocol.py
tests/: TEST_REPORT.md  pyproject.toml  test_a2a_communication.py  test_a2a_models.py  test_home_scenarios.py
tests/agent_home_system_tests.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/demo/: mock_a2a_server.py
tests/node/: test_personal_agent_a2a_client_demo_service.mjs  test_personal_agent_a2a_communication_service.mjs  test_personal_agent_a2a_transport.mjs  test_personal_agent_control_service.mjs
(+163 files in other folders)
