[project]
name = "home-agent"
version = "1.0.0"
description = "Central Agent for Smart Home System with Home Assistant MCP integration"
requires-python = ">=3.12"
dependencies = [
    "paho-mqtt>=2.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "websockets>=12.0",
    # RAG/ML dependencies for digital human Q&A system
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
    "pypdf2>=3.0.0",
    "pdfplumber>=0.10.0",
    "python-docx>=1.1.0",
    "markdown>=3.5.0",
    "numpy>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]

[tool.uv]
dev-dependencies = []
