[project]
name = "room-agent"
version = "0.3.1"
description = "房间智能体, 支持 Google A2A 服务协议."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.0",
    "langchain-core>=1.0.0",
    "langgraph>=1.0.0",
    "langchain-openai>=1.0.0",
    "langchain-mcp-adapters>=0.1.0",
    "paho-mqtt>=2.1.0",
    "a2a-sdk[http-server]>=0.3.25",
    "llm-json-parse>=0.1.0",
]

[project.scripts]
serve = "app.server:cli"

[tool.setuptools]
py-modules = []
include-package-data = true

[tool.setuptools.packages.find]
include = ["app*", "graph*", "integrations*", "config*"]

[tool.setuptools.package-data]
config = ["README.md", "examples/*.yaml"]

[tool.setuptools.exclude-package-data]
"*" = ["__pycache__/*", "*.pyc"]

[tool.uv]
index-url = "https://pypi.mcurobot.com/root/agent-smart-home-system"
publish-url = "https://pypi.mcurobot.com/root/agent-smart-home-system"

# ==================== 构建系统 ====================
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio",
    "types-pyyaml>=6.0.12.20250915",
]

# ==================== 测试 ====================
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# ==================== 代码格式化 ====================
[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
